--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HomePage</title>
+    <style>
+        body{
+            background-color: aqua;
+        }
+    </style>
 </head>
 <body>
     <h1>HomePage</h1>
+    <p1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat aliquam ullam deleniti adipisci a id nostrum consectetur fugit, cumque repudiandae aliquid explicabo maiores earum natus, quo iste possimus voluptas tempore.</p1>
 </body>
 </html>
